--- a/Restaurant Roulette/src/main/res/menu/restaurant_list.xml
+++ b/Restaurant Roulette/src/main/res/menu/restaurant_list.xml
@@ -7,4 +7,10 @@
         android:icon="@android:drawable/ic_menu_add"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/menu_delete_all_restaurants"
+        android:orderInCategory="120"
+        android:title="@string/menu_delete_all_restaurants"
+        app:showAsAction="never" />
+
 </menu>
