--- a/Restaurant Roulette/src/main/res/menu/restaurant_list.xml
+++ b/Restaurant Roulette/src/main/res/menu/restaurant_list.xml
@@ -4,12 +4,13 @@
     <item
         android:id="@+id/menu_add_restaurant"
         android:orderInCategory="100"
-        android:icon="@android:drawable/ic_menu_add"
+        android:icon="@drawable/ic_action_new"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/menu_delete_all_restaurants"
         android:orderInCategory="120"
+        android:icon="@drawable/ic_action_discard"
         android:title="@string/menu_delete_all_restaurants"
         app:showAsAction="never" />
 
