--- a/Restaurant Roulette/src/main/res/values/dimens.xml
+++ b/Restaurant Roulette/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="navigation_drawer_width">240dp</dimen>
 
     <dimen name="margin_editText">8dp</dimen>
+    <dimen name="margin_horizontal_listitem">8dp</dimen>
+    <dimen name="margin_vertical_listitem">8dp</dimen>
 </resources>
