--- a/Restaurant Roulette/src/main/res/layout/row_restaurant_list.xml
+++ b/Restaurant Roulette/src/main/res/layout/row_restaurant_list.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/margin_horizontal_listitem"
     android:paddingRight="@dimen/margin_horizontal_listitem"
     android:paddingBottom="@dimen/margin_vertical_listitem"
-    android:paddingTop="@dimen/margin_vertical_listitem">
+    android:paddingTop="@dimen/margin_vertical_listitem"
+    android:descendantFocusability="blocksDescendants">
 
     <TextView
         android:layout_width="wrap_content"
