--- a/Restaurant Roulette/src/main/res/layout/fragment_restaurant.xml
+++ b/Restaurant Roulette/src/main/res/layout/fragment_restaurant.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -8,77 +8,81 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" >
 
-    <TextView
-        android:id="@+id/restaurant_name_text"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/restaurant_name" />
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/restaurant_name_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/restaurant_name" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/restaurant_name"
-        android:layout_alignBaseline="@+id/restaurant_name_text"
-        android:layout_toRightOf="@+id/restaurant_name_text"
-        android:layout_alignParentEnd="true"
-        android:layout_marginLeft="@dimen/margin_editText"/>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/restaurant_name"
+            android:layout_alignBaseline="@+id/restaurant_name_text"
+            android:layout_toRightOf="@+id/restaurant_name_text"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="@dimen/margin_editText"
+            android:inputType="textCapSentences" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/restaurant_genre"
-        android:id="@+id/restaurant_genre_text"
-        android:layout_below="@+id/restaurant_name"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="50dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/restaurant_genre"
+            android:id="@+id/restaurant_genre_text"
+            android:layout_below="@+id/restaurant_name"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="50dp" />
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner_restaurant_genre"
-        android:layout_alignTop="@+id/restaurant_genre_text"
-        android:layout_alignLeft="@+id/restaurant_name"
-        android:layout_alignStart="@+id/restaurant_name" />
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner_restaurant_genre"
+            android:layout_alignTop="@+id/restaurant_genre_text"
+            android:layout_alignLeft="@+id/restaurant_name"
+            android:layout_alignStart="@+id/restaurant_name" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/restaurant_rating"
-        android:id="@+id/restaurant_rating_text"
-        android:layout_below="@+id/spinner_restaurant_genre"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/restaurant_rating"
+            android:id="@+id/restaurant_rating_text"
+            android:layout_below="@+id/spinner_restaurant_genre"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="25dp" />
 
-    <RatingBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rating_bar_restaurant"
-        android:layout_alignTop="@+id/restaurant_rating_text"
-        android:layout_alignLeft="@+id/spinner_restaurant_genre"
-        android:layout_alignStart="@+id/spinner_restaurant_genre"
-        android:rating="3"
-        android:stepSize="1" />
+        <RatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rating_bar_restaurant"
+            android:layout_alignTop="@+id/restaurant_rating_text"
+            android:layout_alignLeft="@+id/spinner_restaurant_genre"
+            android:layout_alignStart="@+id/spinner_restaurant_genre"
+            android:rating="3"
+            android:stepSize="1" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/restaurant_notes"
-        android:id="@+id/restaurant_notes_text"
-        android:layout_below="@+id/rating_bar_restaurant"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="28dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/restaurant_notes"
+            android:id="@+id/restaurant_notes_text"
+            android:layout_below="@+id/rating_bar_restaurant"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="28dp" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:id="@+id/restaurant_notes"
-        android:layout_below="@+id/restaurant_notes_text"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:capitalize="sentences" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine|textCapSentences"
+            android:id="@+id/restaurant_notes"
+            android:layout_below="@+id/restaurant_notes_text"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true" />
+    </RelativeLayout>
 
-</RelativeLayout>
+</ScrollView>
