record selection history, correctly handle config changes

--- a/Restaurant Roulette/src/main/res/menu/main.xml
+++ b/Restaurant Roulette/src/main/res/menu/main.xml
@@ -2,11 +2,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.physphil.android.restaurantroulette.MainActivity" >
-    <item android:id="@+id/action_example"
-        android:title="@string/action_example"
+
+    <item android:id="@+id/menu_clear_restaurant_history"
+        android:title="@string/menu_clear_restaurant_history"
+        android:orderInCategory="200"
         app:showAsAction="never" />
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
+
+    <item android:id="@+id/menu_settings"
+        android:title="@string/menu_settings"
+        android:orderInCategory="210"
         app:showAsAction="never" />
+
 </menu>
