--- a/Restaurant Roulette/src/main/res/layout/row_restaurant_list.xml
+++ b/Restaurant Roulette/src/main/res/layout/row_restaurant_list.xml
@@ -1,42 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:paddingLeft="@dimen/margin_horizontal_listitem"
     android:paddingRight="@dimen/margin_horizontal_listitem"
-    android:paddingBottom="@dimen/margin_vertical_listitem"
+
     android:paddingTop="@dimen/margin_vertical_listitem"
-    android:descendantFocusability="blocksDescendants">
+    android:descendantFocusability="blocksDescendants"
+    android:background="@color/ics_gray">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Restaurant Title"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/restaurant_name"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:paddingLeft="@dimen/margin_horizontal_listitem"
+        android:paddingRight="@dimen/margin_horizontal_listitem"
+        android:paddingBottom="@dimen/margin_vertical_listitem"
+        android:paddingTop="@dimen/margin_vertical_listitem"
+        android:background="@drawable/card_background">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Genre"
-        android:id="@+id/restaurant_genre"
-        android:layout_below="@+id/restaurant_name"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Restaurant Title"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/restaurant_name"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/restaurant_delete_button"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/image_button_background"
-        android:src="@drawable/ic_action_discard"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Genre"
+            android:id="@+id/restaurant_genre"
+            android:layout_below="@+id/restaurant_name"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
-</RelativeLayout>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/restaurant_delete_button"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/image_button_background"
+            android:src="@drawable/ic_action_discard"/>
+
+    </RelativeLayout>
+
+</FrameLayout>
