--- a/Restaurant Roulette/src/main/res/values/colors.xml
+++ b/Restaurant Roulette/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
 
     <color name="ics_blue">#33B5E5</color>
     <color name="ics_white">#F9F9F9</color>
+    <color name="ics_gray">#E5E5E5</color>
 </resources>
