--- a/Restaurant Roulette/src/main/res/layout/fragment_restaurant.xml
+++ b/Restaurant Roulette/src/main/res/layout/fragment_restaurant.xml
@@ -6,40 +6,32 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" >
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/ics_gray">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/restaurant_name_text"
-            android:layout_width="wrap_content"
+        <include
+            android:id="@+id/restaurant_name_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/restaurant_name" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/restaurant_name"
-            android:layout_alignBaseline="@+id/restaurant_name_text"
-            android:layout_toRightOf="@+id/restaurant_name_text"
-            android:layout_alignParentEnd="true"
-            android:layout_marginLeft="@dimen/margin_editText"
-            android:inputType="textCapSentences" />
+            layout="@layout/restaurant_name"
+            android:background="@drawable/card_background_normal" />
 
         <include
             android:id="@+id/restaurant_genre_spinner"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/restaurant_genre_spinner"
-            android:layout_below="@+id/restaurant_name"
+            android:layout_below="@+id/restaurant_name_layout"
             android:layout_alignParentLeft="true"
             android:layout_marginTop="@dimen/margin_horizontal_restaurant_row"/>
 
         <include
             android:id="@+id/restaurant_rating_bar"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/restaurant_rating_bar"
             android:layout_below="@+id/restaurant_genre_spinner"
@@ -47,23 +39,16 @@
             android:layout_alignParentStart="true"
             android:layout_marginTop="@dimen/margin_horizontal_restaurant_row" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <include
+            android:id="@+id/restaurant_notes_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/restaurant_notes"
-            android:id="@+id/restaurant_notes_text"
-            android:layout_below="@+id/restaurant_rating_bar"
+            layout="@layout/restaurant_notes"
+            android:layout_below="@id/restaurant_rating_bar"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_marginTop="@dimen/margin_horizontal_restaurant_row" />
 
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine|textCapSentences"
-            android:id="@+id/restaurant_notes"
-            android:layout_below="@+id/restaurant_notes_text"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true" />
     </RelativeLayout>
 
 </ScrollView>
