--- a/Restaurant Roulette/src/main/res/layout/restaurant_genre_spinner.xml
+++ b/Restaurant Roulette/src/main/res/layout/restaurant_genre_spinner.xml
@@ -3,7 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:background="@drawable/card_background_normal">
 
     <TextView
         android:layout_width="wrap_content"
