--- a/Restaurant Roulette/src/main/res/layout/row_restaurant_list.xml
+++ b/Restaurant Roulette/src/main/res/layout/row_restaurant_list.xml
@@ -23,11 +23,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Restaurant Title"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            style="@style/TextAppearanceListviewHeader"
             android:id="@+id/restaurant_name"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_toLeftOf="@+id/restaurant_delete_button"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,7 +38,8 @@
             android:id="@+id/restaurant_genre"
             android:layout_below="@+id/restaurant_name"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_toLeftOf="@+id/restaurant_delete_button"/>
 
         <ImageButton
             android:layout_width="wrap_content"
