--- a/Restaurant Roulette/src/main/res/layout/fragment_restaurant.xml
+++ b/Restaurant Roulette/src/main/res/layout/fragment_restaurant.xml
@@ -3,10 +3,10 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/margin_horizontal_card"
+    android:paddingRight="@dimen/margin_horizontal_card"
+    android:paddingTop="@dimen/margin_vertical_card"
+    android:paddingBottom="@dimen/margin_vertical_card"
     android:background="@color/ics_gray">
 
     <RelativeLayout
@@ -17,37 +17,49 @@
             android:id="@+id/restaurant_name_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            layout="@layout/restaurant_name"
-            android:background="@drawable/card_background_normal" />
+            layout="@layout/restaurant_name" />
 
-        <include
-            android:id="@+id/restaurant_genre_spinner"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            layout="@layout/restaurant_genre_spinner"
-            android:layout_below="@+id/restaurant_name_layout"
-            android:layout_alignParentLeft="true"
-            android:layout_marginTop="@dimen/margin_horizontal_restaurant_row"/>
+            android:orientation="vertical"
+            android:layout_below="@id/restaurant_name_layout"
+            android:layout_marginTop="@dimen/margin_vertical_card"
+            android:background="@drawable/card_background_normal">
 
-        <include
-            android:id="@+id/restaurant_rating_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/restaurant_rating_bar"
-            android:layout_below="@+id/restaurant_genre_spinner"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="@dimen/margin_horizontal_restaurant_row" />
+            <include
+                android:id="@+id/restaurant_genre_spinner_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                layout="@layout/restaurant_genre_spinner"
+                android:layout_marginBottom="@dimen/margin_vertical_restaurant_row"/>
 
-        <include
-            android:id="@+id/restaurant_notes_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/restaurant_notes"
-            android:layout_below="@id/restaurant_rating_bar"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="@dimen/margin_horizontal_restaurant_row" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?android:attr/listDivider" />
+
+            <include
+                android:id="@+id/restaurant_rating_bar_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                layout="@layout/restaurant_rating_bar"
+                android:layout_marginTop="@dimen/margin_vertical_restaurant_row"
+                android:layout_marginBottom="@dimen/margin_vertical_restaurant_row" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?android:attr/listDivider" />
+
+            <include
+                android:id="@+id/restaurant_notes_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                layout="@layout/restaurant_notes"
+                android:layout_marginTop="@dimen/margin_vertical_restaurant_row" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
