--- a/Restaurant Roulette/src/main/res/layout/restaurant_rating_bar.xml
+++ b/Restaurant Roulette/src/main/res/layout/restaurant_rating_bar.xml
@@ -3,8 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/card_background_normal">
+    android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="wrap_content"
