--- a/Restaurant Roulette/src/main/res/layout/row_restaurant_list.xml
+++ b/Restaurant Roulette/src/main/res/layout/row_restaurant_list.xml
@@ -41,6 +41,17 @@
             android:layout_alignParentStart="true"
             android:layout_toLeftOf="@+id/restaurant_delete_button"/>
 
+        <RatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/restaurant_rating"
+            style="@style/listview_ratingbar"
+            android:layout_below="@id/restaurant_genre"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="-2dp"
+            android:numStars="5"
+            android:stepSize="1"/>
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
