--- a/Restaurant Roulette/src/main/res/values/colors.xml
+++ b/Restaurant Roulette/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <color name="ics_blue">#33B5E5</color>
+    <color name="ics_blue_pressed">#0099CC</color>
     <color name="ics_white">#F9F9F9</color>
     <color name="ics_gray">#E5E5E5</color>
 
