--- a/Restaurant Roulette/src/main/res/layout/fragment_restaurant_selector.xml
+++ b/Restaurant Roulette/src/main/res/layout/fragment_restaurant_selector.xml
@@ -3,14 +3,21 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:paddingLeft="@dimen/margin_horizontal_card"
+    android:paddingRight="@dimen/margin_horizontal_card"
+    android:paddingTop="@dimen/margin_vertical_card"
+    android:paddingBottom="@dimen/margin_vertical_card"
+    android:background="@color/ics_gray">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/filter_layout"
+            android:background="@drawable/card_background_normal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,39 +37,26 @@
             android:layout_marginTop="@dimen/margin_vertical_restaurant_row"
             android:layout_marginLeft="@dimen/margin_horizontal_filter_indent"/>
 
+        </RelativeLayout>
+
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/restaurant_selector_button"
             android:id="@+id/btn_select_restaurant"
-            android:layout_below="@+id/restaurant_genre_spinner"
+            android:layout_below="@id/filter_layout"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/margin_vertical_restaurant_row"/>
+            android:layout_marginTop="@dimen/margin_vertical_restaurant_row"
+            android:background="@drawable/button_background"
+            android:textColor="@color/ics_white"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <include
+            layout="@layout/restaurant_answer"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/restaurant_selector_header"
+            android:id="@+id/restaurant_answer_layout"
             android:layout_below="@id/btn_select_restaurant"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/margin_vertical_restaurant_row"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/restaurant_selector_answer"
-            android:layout_below="@id/restaurant_selector_header"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/margin_vertical_restaurant_row"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/restaurant_selector_summary"
-            android:layout_below="@id/restaurant_selector_answer"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/margin_vertical_restaurant_row"/>
+            android:layout_marginTop="@dimen/margin_vertical_restaurant_row" />
 
     </RelativeLayout>
 
