--- a/Restaurant Roulette/src/main/res/menu/global.xml
+++ b/Restaurant Roulette/src/main/res/menu/global.xml
@@ -3,5 +3,6 @@
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:visible="false"/>
 </menu>
