--- a/Restaurant Roulette/src/main/res/menu/main.xml
+++ b/Restaurant Roulette/src/main/res/menu/main.xml
@@ -11,6 +11,7 @@
     <item android:id="@+id/menu_settings"
         android:title="@string/menu_settings"
         android:orderInCategory="210"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:visible="false"/>
 
 </menu>
