--- a/Restaurant Roulette/src/main/res/layout/horizontal_bar.xml
+++ b/Restaurant Roulette/src/main/res/layout/horizontal_bar.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <View
+<View xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="?android:attr/listDivider" />
+        android:background="?android:attr/listDivider" >
 
-</FrameLayout>
+</View>
