--- a/Restaurant Roulette/src/main/res/layout/row_restaurant_list.xml
+++ b/Restaurant Roulette/src/main/res/layout/row_restaurant_list.xml
@@ -49,8 +49,8 @@
             android:layout_below="@id/restaurant_genre"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="-2dp"
-            android:numStars="5"
-            android:stepSize="1"/>
+            android:numStars="@integer/user_rating_max"
+            android:stepSize="@integer/user_rating_step_size"/>
 
         <ImageButton
             android:layout_width="wrap_content"
