--- a/Restaurant Roulette/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/Restaurant Roulette/src/main/res/layout/fragment_navigation_drawer.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:choiceMode="singleChoice"
-    android:divider="@android:color/transparent"
-    android:dividerHeight="0dp"
-    android:background="#cccc"
+    android:dividerHeight="1dp"
+    android:background="#fccc"
     tools:context="com.physphil.android.restaurantroulette.NavigationDrawerFragment" />
