--- a/Restaurant Roulette/src/main/res/drawable/ratingbar_price_level.xml
+++ b/Restaurant Roulette/src/main/res/drawable/ratingbar_price_level.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@android:id/background" android:drawable="@drawable/ic_action_dollar_sign_gray" />
-    <item android:id="@android:id/progress" android:drawable="@drawable/ic_action_dollar_sign_blue" />
+    <item android:id="@android:id/background" android:drawable="@drawable/ic_price_empty" />
+    <item android:id="@android:id/progress" android:drawable="@drawable/ic_price_full" />
 </layer-list>
 
