--- a/Restaurant Roulette/src/main/res/layout/answer_summary_rating.xml
+++ b/Restaurant Roulette/src/main/res/layout/answer_summary_rating.xml
@@ -12,11 +12,11 @@
         android:layout_marginBottom="@dimen/margin_vertical_line_spacing"
         android:text="@string/restaurant_rating"/>
 
-    <RatingBar
+    <include
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/answer_summary_rating_bar"
-        style="@style/summary_ratingbar"
+        layout="@layout/rating_bar_small"
         android:layout_alignParentRight="true"
         android:layout_alignBottom="@id/answer_summary_rating_text"/>
 
