--- a/Restaurant Roulette/src/main/res/layout/answer_summary_number_visits.xml
+++ b/Restaurant Roulette/src/main/res/layout/answer_summary_number_visits.xml
@@ -20,7 +20,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/horizontal_bar_height"
         android:background="?android:attr/listDivider"
         android:layout_below="@id/answer_summary_number_visits_text"/>
 
