--- a/Restaurant Roulette/src/main/res/layout/horizontal_bar.xml
+++ b/Restaurant Roulette/src/main/res/layout/horizontal_bar.xml
@@ -2,7 +2,7 @@
 
 <View xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/horizontal_bar_height"
         android:background="?android:attr/listDivider" >
 
 </View>
