--- a/Restaurant Roulette/src/main/res/values/dimens.xml
+++ b/Restaurant Roulette/src/main/res/values/dimens.xml
@@ -16,5 +16,6 @@
     <dimen name="margin_vertical_restaurant_row">20dp</dimen>
     <dimen name="margin_horizontal_card_indent">16dp</dimen>
 
+    <dimen name="horizontal_bar_height">1dp</dimen>
     <dimen name="rating_bar_height_edit_restaurant">12dp</dimen>
 </resources>
