added get directions from Edit Restaurant view

--- a/Restaurant Roulette/src/main/res/layout/fragment_restaurant_selector.xml
+++ b/Restaurant Roulette/src/main/res/layout/fragment_restaurant_selector.xml
@@ -47,8 +47,9 @@
             android:layout_below="@id/filter_layout"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/margin_vertical_card"
-            android:background="@drawable/button_background"
-            android:textColor="@color/ics_white"/>
+            style="@style/button_blue" />
+            <!--android:background="@drawable/button_background"-->
+            <!--android:textColor="@color/ics_white"/>-->
 
         <include
             layout="@layout/restaurant_answer"
