--- a/Restaurant Roulette/src/main/res/values/styles.xml
+++ b/Restaurant Roulette/src/main/res/values/styles.xml
@@ -38,6 +38,7 @@
     <style name="button_blue" >
         <item name="android:background">@drawable/button_background</item>
         <item name="android:textColor">@color/ics_white</item>
+        <item name="android:minHeight">@dimen/minimum_button_height</item>
     </style>
 
 </resources>
