--- a/Restaurant Roulette/src/main/res/drawable/ratingbar_price_level_small.xml
+++ b/Restaurant Roulette/src/main/res/drawable/ratingbar_price_level_small.xml
@@ -2,6 +2,7 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background" android:drawable="@drawable/ic_price_empty_small" />
+    <item android:id="@android:id/secondaryProgress" android:drawable="@drawable/ic_price_empty_small" />
     <item android:id="@android:id/progress" android:drawable="@drawable/ic_price_full_small" />
 </layer-list>
 
