--- a/Restaurant Roulette/src/main/res/layout/fragment_restaurant_list.xml
+++ b/Restaurant Roulette/src/main/res/layout/fragment_restaurant_list.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="8dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
     android:background="@color/ics_gray" >
 
     <ListView
